admission/validatingAdmissionPolicies/policies/secrets-access/roles/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-secrets-access-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 100e5b48-60df-58ff-b773-18b83ba858b1
  labels:
    check-role-secrets-access.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/warn: enabled
    check-role-secrets-access.security.kolteq.com/audit: 'false,true'
    check-role-secrets-access.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: role-secrets-access
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: check-role-secrets-access.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-secrets-access-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 100e5b48-60df-58ff-b773-18b83ba858b1
  labels:
    check-role-secrets-access.security.kolteq.com/warn: 'false,true'
    check-role-secrets-access.security.kolteq.com/audit: 'false,true'
    check-role-secrets-access.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-secrets-access
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-role-secrets-access.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-secrets-access-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 100e5b48-60df-58ff-b773-18b83ba858b1
  labels:
    check-role-secrets-access.security.kolteq.com/audit: 'false,true'
    security.kolteq.com/audit: enabled
    check-role-secrets-access.security.kolteq.com/enforce: 'false,true'
    check-role-secrets-access.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-secrets-access
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: check-role-secrets-access.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-secrets-access-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 100e5b48-60df-58ff-b773-18b83ba858b1
  labels:
    check-role-secrets-access.security.kolteq.com/audit: 'false,true'
    check-role-secrets-access.security.kolteq.com/enforce: 'false,true'
    check-role-secrets-access.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-secrets-access
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-role-secrets-access.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-secrets-access-namespace-optout-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 100e5b48-60df-58ff-b773-18b83ba858b1
  labels:
    check-role-secrets-access.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/enforce: enabled
    check-role-secrets-access.security.kolteq.com/audit: 'false,true'
    check-role-secrets-access.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-secrets-access
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: check-role-secrets-access.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-secrets-access-namespace-optin-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 100e5b48-60df-58ff-b773-18b83ba858b1
  labels:
    check-role-secrets-access.security.kolteq.com/enforce: 'false,true'
    check-role-secrets-access.security.kolteq.com/audit: 'false,true'
    check-role-secrets-access.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-secrets-access
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-role-secrets-access.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
