admission/validatingAdmissionPolicies/policies/secrets-access/roles/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: role-secrets-access
  annotations:
    security.kubeapt.io/displayName: 'Secrets Access'
    security.kubeapt.io/description: Roles must not grant read or write access to Secrets without tight scoping.
    security.kubeapt.io/resource: Roles
    security.kubeapt.io/severity: "9"
    security.kubeapt.io/remediation: "Remove read/write on secrets. Fields: rules[*].resources, rules[*].verbs."
    policies.kolteq.com/validatingAdmissionPolicy: 100e5b48-60df-58ff-b773-18b83ba858b1
  labels:
    check-role-secrets-access.security.kolteq.com/audit: 'false,true'
    check-role-secrets-access.security.kolteq.com/enforce: 'false,true'
    check-role-secrets-access.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - rbac.authorization.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - roles
  variables:
  - name: secretVerbs
    expression: |
      ["get","list","watch","create","update","patch","delete"]
  validations:
  - expression: |
      !has(object.rules) || object.rules.all(r,
        !(r.apiGroups.exists(ag, ag == "") &&
          r.resources.exists(res, res == "secrets") &&
          r.verbs.exists(v, variables.secretVerbs.exists(sv, sv == v))
        )
      )
    message: |
      Roles must not grant read or write access to Secrets without tight scoping.
